Updating schema set loading for message validation